# Magister_Backend

./: .env.example  .gitignore  .gitleaks.toml  README.md  SECURITY.md  pyproject.toml
.githooks/: pre-commit
app/: config.py  database.py  main.py  seed.py
app/agents/: graph.py  guardrail.py  knowledge.py  persona.py  prompts.py  supervisor.py  tools.py
app/api/: deps.py
app/api/routes/: auth.py  chat.py  embed.py  tutors.py
app/core/: errors.py  llm.py  logging.py  security.py
app/models/: __init__.py  conversation.py  tutor.py
app/schemas/: chat.py  tutor.py
app/services/: conversation_service.py  tutor_service.py
tests/: conftest.py  test_auth.py  test_chat_route.py  test_config.py  test_embed.py  test_escalation.py  test_llm_router.py  test_ssrf.py  test_tutor_service.py
