[project]
name = "magister-backend"
version = "0.1.0"
description = "Magister - backend de tutores de IA (FastAPI + LangGraph)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.4",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "httpx>=0.27",
    "sse-starlette>=2.1",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
